##########################################################################
cmake_minimum_required(VERSION 3.13.1)
##########################################################################
project(pika-spark-sh2)
##########################################################################
set(LIBSH2_TARGET ${PROJECT_NAME})
##########################################################################
add_library(${LIBSH2_TARGET} STATIC
  sh2_util.c
  shtp.c
  sh2_SensorValue.c
  sh2.c
)
##########################################################################
target_include_directories(${LIBSH2_TARGET} PUBLIC .)
##########################################################################
